--- a/react-app/package.json
+++ b/react-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-app",
   "version": "1.0.0",
-  "description": "Search app using React",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "webpack --mode development",
@@ -20,11 +20,14 @@
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
+    "ts-node": "^10.2.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
+    "@nechamaa/meister.usermanagement.autnentication": "^1.0.7",
+    "got": "^11.8.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
