--- a/package.json
+++ b/package.json
@@ -51,6 +51,10 @@
         "title": "Add"
       },
       {
+        "command": "connections.save",
+        "title": "Save"
+      },
+      {
         "command": "connection.start",
         "title": "connection"
       },
