--- a/package.json
+++ b/package.json
@@ -139,11 +139,12 @@
     "@types/vscode": "^1.36.0",
     "glob": "^7.1.4",
     "mocha": "^6.1.4",
-    "typescript": "^3.3.1",
     "tslint": "^5.12.1",
+    "typescript": "^3.3.1",
     "vscode-test": "^1.0.0-next.0"
   },
   "dependencies": {
+    "@gateway.architects/api.sdk.meister": "^1.0.6",
     "@gateway.architects/meister.usermanagement.authentication": "^1.0.4",
     "@gateway.architects/meister.usermanagement.authentication.": "^1.0.3",
     "@nechamaa/meister.usermanagement.autnentication": "^1.0.7",
